# ps5sim

./: .gitignore  .gitmodules  README-fa.md  README.md  _bl.bat
LICENSES/: Ps5sim-MIT.txt
src/: .clang-format  .clang-tidy  CMakeLists.txt  cmake_config.h.in  emulator.cpp  emulator.h  generate_version.cmake  main.cpp  ps5simGitVersion.h.in  utils.cmake
src/common/: CMakeLists.txt  abi.h  assert.cpp  assert.h  byteBuffer.h  common.h  commonSubsystem.cpp  commonSubsystem.h  config.h  dateTime.cpp  dateTime.h  debug.cpp  debug.h  emulatorConfig.cpp  emulatorConfig.h  file.cpp  file.h  hash.h  hostException.cpp  hostException.h  magicEnum.h  profiler.cpp  profiler.h  singleton.h  stringUtils.h  subsystems.cpp  subsystems.h  systemInfo.cpp  systemInfo.h  threads.cpp  threads.h  timer.cpp  timer.h  virtualMemory.cpp  virtualMemory.h
src/common/logging/: log.cpp  log.h
src/common/platform/: sysDbg.h  sysFileIO.h  sysLinuxDbg.cpp  sysLinuxFileIO.cpp  sysLinuxVirtual.cpp  sysSwapByteOrder.h  sysTimer.h  sysVirtual.h  sysWindowsDbg.cpp  sysWindowsFileIO.cpp  sysWindowsVirtual.cpp
src/graphics/: asyncJob.h
src/graphics/guest_gpu/: gpu_defs.h  gpu_format.cpp  gpu_format.h  graphicsRun.cpp  graphicsRun.h  hardwareContext.h  pm4.cpp  pm4.h  tile.cpp  tile.h
src/graphics/guest_gpu/command_processor/: commandProcessor.h  pm4Dispatch.cpp  pm4Dispatch.h  pm4Handlers.cpp
src/graphics/host_gpu/: graphicContext.h  hostMemory.cpp  hostMemory.h  memoryTracker.cpp  memoryTracker.h  pageManager.cpp  pageManager.h  rangeSet.h  regionDefinitions.h  regionManager.h  transfer.cpp  transfer.h  utils.cpp  utils.h  vma.cpp  vma.h  vulkanCommon.cpp  vulkanCommon.h  vulkanInstance.h
src/graphics/host_gpu/objects/: label.cpp  label.h  textureCommon.cpp  textureCommon.h
src/graphics/host_gpu/renderer/: bufferCache.cpp  bufferCache.h  colorRenderTarget.cpp  colorRenderTarget.h  context.cpp  debug.cpp  debug.h  depthRenderTarget.cpp  depthRenderTarget.h  descriptorCache.cpp  descriptorCache.h  descriptors.cpp  descriptors.h  dummyTextureCache.cpp  dummyTextureCache.h  framebufferCache.cpp  framebufferCache.h  gdsBuffer.cpp  gdsBuffer.h  gpuResourceManager.cpp  gpuResourceManager.h  image.cpp  image.h  imageInfo.h  imageView.cpp  imageView.h  internal.h  multiLevelPageTable.h  pipelineCache.cpp  pipelineCache.h  render.h  renderCompute.cpp  renderContext.cpp  renderContext.h  renderDraw.cpp  renderDraw.h  renderInternal.h  renderState.h  renderTarget.h  renderTargetBarriers.cpp  (+19 more)
src/graphics/presentation/: displayBuffer.h  renderDoc.cpp  renderDoc.h  videoOut.cpp  videoOut.h  window.h
src/graphics/presentation/window/: swapchain.cpp  vulkanWindow.cpp  window.cpp  windowInternal.h
src/graphics/rt/: hardware.cpp  hardware.h
src/graphics/shader/: shader.cpp  shader.h  shaderBindings.cpp  shaderBindings.h  shaderStageRuntime.cpp  shaderVertexMetadata.cpp  shaderVertexMetadata.h
src/graphics/shader/recompiler/: BindingLayout.cpp  BindingLayout.h  BufferFormat.h  ExecMask.cpp  ExecMask.h  ExportOps.cpp  ExportOps.h  ImageOps.cpp  ImageOps.h  MemoryOps.cpp  MemoryOps.h  ResourceMaterialization.cpp  ResourceMaterialization.h  ResourceTracking.cpp  ResourceTracking.h  ScalarAluOps.cpp  ScalarAluOps.h  ScalarProvenance.cpp  ScalarProvenance.h  ShaderCFG.cpp  ShaderCFG.h  ShaderDecoder.cpp  ShaderDecoder.h  ShaderIR.h  ShaderInfoCollection.cpp  ShaderInfoCollection.h  ShaderRecompiler.cpp  ShaderRecompiler.h  SpirvBuilder.cpp  SpirvBuilder.h  SpirvEmitter.cpp  SpirvEmitter.h  SrtPatcher.cpp  SrtPatcher.h  SrtWalker.cpp  SrtWalker.h  VectorAluOps.cpp  VectorAluOps.h
src/graphics/shader/recompiler/shaderIR/: ShaderIR.cpp  ShaderIRInternal.h  ShaderIRLog.cpp  ShaderIRMemory.cpp  ShaderIROpcodes.cpp
src/graphics/shader/recompiler/spirvEmitter/: spirvEmitterAluOps.cpp  spirvEmitterAnalysis.cpp  spirvEmitterControlFlow.cpp  spirvEmitterExport.cpp  spirvEmitterFlowOps.cpp  spirvEmitterImageHelpers.cpp  spirvEmitterImageOps.cpp  spirvEmitterInternal.h  spirvEmitterMemory.cpp  spirvEmitterModule.cpp  spirvEmitterValues.cpp
src/kernel/: eventFlag.cpp  eventFlag.h  eventQueue.cpp  eventQueue.h  fileSystem.cpp  fileSystem.h  memory.cpp  memory.h  memoryAddressSpace.inc  pthread.cpp  pthread.h  semaphore.cpp  semaphore.h
src/launcher/: CMakeLists.txt
src/launcher/forms/: configuration_edit_dialog.ui  configuration_list_widget.ui  main_dialog.ui
src/launcher/include/: common.h  compatibilityDatabase.h  configuration.h  configurationEditDialog.h  configurationItem.h  configurationListWidget.h  gameListTreeWidget.h  mainDialog.h  mandatoryLineEdit.h  ps5BootSplash.h  ps5HomeScreen.h  ps5SettingsDialog.h  trophyViewerDialog.h
src/launcher/resources/: launcher.qrc
src/launcher/src/: compatibilityDatabase.cpp  configurationEditDialog.cpp  configurationItem.cpp  configurationListWidget.cpp  main.cpp  mainDialog.cpp  mandatoryLineEdit.cpp  ps5BootSplash.cpp  ps5HomeScreen.cpp  ps5SettingsDialog.cpp  trophyViewerDialog.cpp
src/libs/: agc.cpp  agc.h  agcRegisterDefaults.inc  ajm.cpp  audio.cpp  audio.h  audio_internal.h  avPlayer.cpp  controller.cpp  controller.h  dialog.cpp  dialog.h  errno.cpp  errno.h  guestPrintf.cpp  guestPrintf.h  libAmpr.cpp  libAppContent.cpp  libAudio.cpp  libAudio2.cpp  libC.cpp  libDbgAsan.cpp  libDebug.cpp  libDialog.cpp  libFont.cpp  libFontFt.cpp  libGraphicsDriver.cpp  libJson2.cpp  libKernel.cpp  libNet.cpp  libPad.cpp  libPlayGo.cpp  libPngDec.cpp  libPsml.cpp  libRtc.cpp  libRudp.cpp  libSaveData.cpp  libShare.cpp  libSysmodule.cpp  libSystemService.cpp  (+10 more)
src/libs/ajm/: aac_decoder.h  atrac9_decoder.h  ffmpeg_decoder_common.h  mp3_decoder.h
src/loader/: elf.cpp  elf.h  jit.h  runtimeLinker.cpp  runtimeLinker.h  symbolDatabase.cpp  symbolDatabase.h  systemContent.cpp  systemContent.h  timer.cpp  timer.h  x64InstructionEmulator.cpp  x64InstructionEmulator.h
tests/: ImagePageTableTests.cpp  MemoryTrackerTests.cpp  PageManagerTests.cpp  ResourceMutexTests.cpp  ResourceTrackingTests.cpp  ScalarProvenanceTests.cpp  ShaderRecompilerComputeTests.cpp  ShaderStageRuntimeTests.cpp  (+3 more)
(+1 files in other folders)
